--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my cool website">
     <title>My Cool Website</title>
-    <meta property="og:image" content="https://www.w3schools.com/images/w3schools_logo_436_2.png">
+    <meta property="og:image" content="https://www.istockphoto.com/photo/glowing-python-programming-language-code-on-a-blue-digital-surface-with-a-sphere-gm1413990965-462867622">
 </head>
 <body>
     <h1>This is a very big text</h1>
