--- a/index.html
+++ b/index.html
@@ -1,20 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is my cool website">
-    <title>My Cool Website</title>
-    <meta property="og:image" content="https://www.istockphoto.com/photo/glowing-python-programming-language-code-on-a-blue-digital-surface-with-a-sphere-gm1413990965-462867622">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is a very big text</h1>
-    <h2>This is a demo text</h2>
-    <h3>This is a demo text</h3>
-    <h4>This is a demo text</h4>
-    <h5>This is a demo text</h5>
-    <h6>This is a demo text</h6>
+  <header>
+    <h1>Welcome to My Portfolio</h1>
+   
+  
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Hello I am  web developer...</p>
+  </section>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat accusantium delectus eum vero est voluptatum magnam dolor eaque qui. Omnis aliquid quos quae accusantium officiis repellendus, inventore vel quo fugiat rem earum illum voluptatibus libero eum aspernatur recusandae odio deserunt officia facere amet sint numquam similique tempora voluptates! Quas accusantium tenetur praesentium laboriosam sapiente dolor voluptatibus perspiciatis quasi dolore aut, blanditiis voluptas molestias totam et eius eaque, explicabo animi nihil impedit consequuntur. Quos incidunt voluptate, ratione ullam alias, fugiat esse et perferendis vitae tempora, animi deleniti doloribus sint sunt optio aliquid delectus tempore qui! Pariatur nesciunt veniam maxime minus reprehenderit.</p>
+  <section id="skills">
+    <h2>My Skills :-</h2>
+    <ul>
+        <li>1. Primary Skill: Python (for its versatility across many domains).</li>
+        <li>2. Secondary Skills: HTML/CSS (if web development is your focus) + Java (for enterprise and Android development).</li>
+        <li>3. Tertiary Skills: C/C++ (for performance-critical or systems programming) + C# (if i am interested in game development or Windows apps)</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <!-- Add more skills -->
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3>Project 1</h3>
+      <p>2d game developmeent using python</p>
+    </div>
+    <!-- Add more projects -->
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: v75145116@gmail.com</p>
+    <!-- Or create a contact form -->
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Vivek</p>
+  </footer>
+  
+  <script src="script.js"></script>
 </body>
 </html>
+ <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+
+
+  
