--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>Project 1</h3>
-      <p>2d game developmeent using python</p>
+      <h3>Project 1 using python</h3>
+      <p>•2d game development</p>
+      <p>•web development</p>
     </div>
     <!-- Add more projects -->
   </section>
@@ -64,4 +65,3 @@
 
 
 
-  
